Proyecto2/k8s/rust/rust-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: proyecto2
spec:
  selector:
    app: rust-api
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
